WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
16408
back/forward HTTP navigations fail to prefer loading from cache
https://bugs.webkit.org/show_bug.cgi?id=16408
Summary
back/forward HTTP navigations fail to prefer loading from cache
Darin Fisher (:fishd, Google)
Reported
2007-12-11 23:33:17 PST
back/forward HTTP navigations fail to prefer loading from cache HTTPS navigations however are aggressively served from cache on back/forward. it seems like the behavior of HTTP and HTTPS on back/forward is reversed from what it should be. here's the code that seems wrong: case FrameLoadTypeIndexedBackForward: if (itemURL.protocol() == "https") request.setCachePolicy(ReturnCacheDataElseLoad); break; this code is in FrameLoader::loadItem i believe that the sense of that comparison should be reversed.
Attachments
patch: reverse sense
(1.21 KB, patch)
2007-12-11 23:57 PST
,
Darin Fisher (:fishd, Google)
mjs
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Darin Fisher (:fishd, Google)
Comment 1
2007-12-11 23:57:41 PST
Created
attachment 17860
[details]
patch: reverse sense
Maciej Stachowiak
Comment 2
2007-12-12 04:53:34 PST
Comment on
attachment 17860
[details]
patch: reverse sense r=me
Oliver Hunt
Comment 3
2007-12-12 14:37:59 PST
Landed
r28662
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug