2007-12-12  MorganL  <morganl.webkit@yahoo.com> -- http://bugs.webkit.org/show_bug.cgi?id=16408

Reviewed by Maciej.

        Fixes:
        http://bugs.webkit.org/show_bug.cgi?id=16408

        When navigating back/forward to a http:// link, we should prefer to
        load from cache if possible.

        * loader/FrameLoader.cpp:


Canonical link: https://commits.webkit.org/22537@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@28662 268f45cc-cd09-0410-ab3c-d52691b4dbfc